Fix spacing

--- a/style.css
+++ b/style.css
@@ -174,6 +174,15 @@ nav ul li a {
 
 }
 
+
+.nav_list li:first-child {
+  padding-left: 0;
+}
+/* .nav_list li + li::before {
+    content: " | ";
+    padding: 0 10px;
+} */
+
 /*Countdown timer*/
 .countdown {
             display: flex;
@@ -235,7 +244,7 @@ nav ul li a {
   display: inline-block;
   vertical-align: middle;
   padding: 0.25em 0.25em;
-  padding-left: 2%;
+  padding-left: 20px;
 }
 /* .logo {
   width: 20%;
@@ -757,6 +766,7 @@ footer {
 Mobile mode settings
 **/
 @media screen and (max-width: 850px) {
+
   h1 {
     font-size: 2.5rem;
   }
@@ -835,11 +845,14 @@ margin-top: -5.75em;
 height: 100vh;
 color: white;
         text-shadow: 2px 2px 5px black;
+        position: absolute;
+        right: 0;
     }
 
     .nav_list li {
       padding-left: 0%;
-      padding: 15% 0.25em;
+      /* padding: 15% 0.25em; */
+      padding: 10% 0.25em;
     }
 
     .nav-mobile {
@@ -850,7 +863,7 @@ color: white;
       /* background-color: rgba(143, 171, 165, 0.75); */
       height: 70px;
       width: 70px;
-    }
+    }6
 
     .links {
       display: none;
